Fix spacing with buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 4.688em;
+    gap: 2em;
     margin-bottom: 1.563em;
   }
 }
